--- a/playbooks/03.play-install-k8s.yaml
+++ b/playbooks/03.play-install-k8s.yaml
@@ -76,7 +76,7 @@
     - name: Add Docker repository
       copy:
         content: |
-          deb [arch={{ ansible_architecture }} signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
+          deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu jammy stable
         dest: /etc/apt/sources.list.d/docker.list
         mode: '0644'
 
