--- a/playbooks/031.init-k8s-master-join-worker.yaml
+++ b/playbooks/031.init-k8s-master-join-worker.yaml
@@ -24,10 +24,10 @@
         group: ubuntu
         mode: '0644'
 
-    - name: Install Calico CNI
-      command: kubectl apply -f https://raw.githubusercontent.com/projectcalico/calico/v3.25.0/manifests/calico.yaml
-      environment:
-        KUBECONFIG: /home/ubuntu/.kube/config
+    # - name: Install Calico CNI
+    #   command: kubectl apply -f https://raw.githubusercontent.com/projectcalico/calico/v3.25.0/manifests/calico.yaml
+    #   environment:
+    #     KUBECONFIG: /home/ubuntu/.kube/config
 
     - name: Extract join command
       shell: |
