--- a/playbooks/031.init-k8s-master-join-worker.yaml
+++ b/playbooks/031.init-k8s-master-join-worker.yaml
@@ -4,7 +4,7 @@
   become: true
   tasks:
     - name: Initialize Kubernetes master node
-      command: kubeadm init
+      command: kubeadm init --apiserver-advertise-address {{ hostvars[inventory_hostname]['ansible_host'] }}
       register: kubeadm_init_output
 
     - name: Print init command
