--- a/playbooks/031.init-k8s-master.yaml
+++ b/playbooks/031.init-k8s-master.yaml
@@ -28,7 +28,7 @@
         group: ubuntu
         mode: '0644'
 
-    # - name: Install Calico CNI
-    #   command: kubectl apply -f https://raw.githubusercontent.com/projectcalico/calico/v3.29.3/manifests/calico.yaml
-    #   environment:
-    #     KUBECONFIG: /home/ubuntu/.kube/config
+    - name: Install Calico CNI
+      command: kubectl apply -f https://raw.githubusercontent.com/projectcalico/calico/v3.29.3/manifests/calico.yaml
+      environment:
+        KUBECONFIG: /home/ubuntu/.kube/config
