--- a/playbooks/031.init-k8s-master.yaml
+++ b/playbooks/031.init-k8s-master.yaml
@@ -28,6 +28,10 @@
         group: ubuntu
         mode: '0644'
 
+    - name: Wait for 20 seconds
+      pause:
+        seconds: 20
+
     - name: Install Calico CNI
       command: kubectl apply -f https://raw.githubusercontent.com/projectcalico/calico/v3.29.3/manifests/calico.yaml
       environment:
