--- a/playbooks/02.play-harbor.yaml
+++ b/playbooks/02.play-harbor.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Install Harbor
   hosts: harbor_servers
-  become: yes
+  become: true
   vars:
     harbor_version: "2.8.0"
     harbor_install_dir: "/opt/harbor"
