--- a/playbooks/020-install-harbor.yaml
+++ b/playbooks/020-install-harbor.yaml
@@ -1,45 +1,51 @@
 ---
-- name: Install Harbor
-  hosts: harbor_servers
+- name: Install Harbor on Ubuntu 22.04
+  hosts: harbor
   become: true
   vars:
-    harbor_version: "2.8.0"
+    harbor_version: "2.13.0"
     harbor_install_dir: "/opt/harbor"
     harbor_config_file: "/opt/harbor/harbor.yml"
     harbor_download_url: "https://github.com/goharbor/harbor/releases/download/v{{ harbor_version }}/harbor-online-installer-v{{ harbor_version }}.tgz"
 
   tasks:
-    - name: Ensure required packages are installed
-      apt:
-        name: 
-          - docker.io
-          - docker-compose
-          - curl
-        state: present
-        update_cache: yes
+    # - name: Ensure required packages are installed
+    #   ansible.builtin.apt:
+    #     name:
+    #       - wget
+    #       - tar
+    #       - docker.io
+    #       - docker-compose-plugin
+    #     state: present
+    #     update_cache: yes
 
     - name: Download Harbor installer
-      get_url:
+      ansible.builtin.get_url:
         url: "{{ harbor_download_url }}"
         dest: "/tmp/harbor-online-installer-v{{ harbor_version }}.tgz"
 
     - name: Extract Harbor installer
-      unarchive:
+      ansible.builtin.unarchive:
         src: "/tmp/harbor-online-installer-v{{ harbor_version }}.tgz"
         dest: "{{ harbor_install_dir }}"
         remote_src: yes
 
-    - name: Copy Harbor configuration file
-      template:
-        src: "templates/harbor.yml.j2"
-        dest: "{{ harbor_config_file }}"
+    # - name: Copy Harbor configuration file
+    #   ansible.builtin.template:
+    #     src: "templates/harbor.yml.j2"
+    #     dest: "{{ harbor_config_file }}"
+    #     owner: root
+    #     group: root
+    #     mode: 0644
 
-    - name: Install Harbor
-      command: "./install.sh"
-      args:
-        chdir: "{{ harbor_install_dir }}"
+    # - name: Install Harbor
+    #   ansible.builtin.command:
+    #     cmd: "./install.sh"
+    #     chdir: "{{ harbor_install_dir }}"
+    #   environment:
+    #     DOCKER_COMPOSE: "/usr/libexec/docker/cli-plugins/docker-compose"
 
-    - name: Start Harbor services
-      command: "docker-compose up -d"
-      args:
-        chdir: "{{ harbor_install_dir }}"
+    # - name: Start Harbor services
+    #   ansible.builtin.command:
+    #     cmd: "docker compose up -d"
+    #     chdir: "{{ harbor_install_dir }}"
