--- a/playbooks/035-install-nginx-ingress-controller.yaml
+++ b/playbooks/035-install-nginx-ingress-controller.yaml
@@ -2,15 +2,15 @@
   hosts: k8s_master
   gather_facts: false
   tasks:
-    - name: Add the Helm OCI repository
-      ansible.builtin.command:
-        cmd: helm registry login ghcr.io
-      register: helm_registry_login
-      changed_when: "'\"Login Succeeded\"' in helm_registry_login.stdout"
+    # - name: Add the Helm OCI repository
+    #   ansible.builtin.command:
+    #     cmd: helm registry login ghcr.io
+    #   register: helm_registry_login
+    #   changed_when: "'\"Login Succeeded\"' in helm_registry_login.stdout"
 
     - name: Pull the NGINX Ingress Controller chart
       ansible.builtin.command:
-        cmd: helm pull oci://ghcr.io/nginx/charts/nginx-ingress --version 1.0.0 --untar
+        cmd: helm pull oci://ghcr.io/nginx/charts/nginx-ingress --version 2.1.0 --untar
       args:
         chdir: /tmp
 
