--- a/playbooks/035-install-nginx-ingress-controller.yaml
+++ b/playbooks/035-install-nginx-ingress-controller.yaml
@@ -2,6 +2,11 @@
   hosts: k8s_master
   gather_facts: false
   tasks:
+    - name: Ensure pip is installed
+      ansible.builtin.raw: |
+        apt-get update -y && apt-get install -y python3-pip
+      changed_when: false
+
     - name: Ensure Python dependencies are installed
       ansible.builtin.raw: |
         python3 -m pip install --user openshift kubernetes
