--- a/playbooks/035-install-nginx-ingress-controller.yaml
+++ b/playbooks/035-install-nginx-ingress-controller.yaml
@@ -59,4 +59,5 @@
             replicaCount: 2
             service:
               type: NodePort
-              nodePort: 30080
+              httpPort:
+                nodePort: 30080
