--- a/playbooks/036.test-k8s.yaml
+++ b/playbooks/036.test-k8s.yaml
@@ -1,3 +1,29 @@
+- name: Install NGINX Ingress Controller using Helm
+  hosts: localhost
+  gather_facts: false
+  become: true
+  tasks:
+    - name: Update apt cache
+      apt:
+        update_cache: yes
+
+    - name: Install required system packages
+      apt:
+        name:
+          - python3-pip
+          - python3-venv
+          - curl
+          - gnupg
+          - apt-transport-https
+        state: present
+
+    - name: Install pip packages for Kubernetes interaction
+      pip:
+        name:
+          - openshift
+          - kubernetes
+        executable: pip3
+
 - name: Create an NGINX pod and service for testing
   hosts: k8s_master
   gather_facts: false
