--- a/playbooks/036.test-k8s.yaml
+++ b/playbooks/036.test-k8s.yaml
@@ -1,28 +1,28 @@
-- name: Install NGINX Ingress Controller using Helm
-  hosts: localhost
-  gather_facts: false
-  become: true
-  tasks:
-    - name: Update apt cache
-      apt:
-        update_cache: yes
+# - name: Install NGINX Ingress Controller using Helm
+#   hosts: localhost
+#   gather_facts: false
+#   become: true
+#   tasks:
+#     - name: Update apt cache
+#       apt:
+#         update_cache: yes
 
-    - name: Install required system packages
-      apt:
-        name:
-          - python3-pip
-          - python3-venv
-          - curl
-          - gnupg
-          - apt-transport-https
-        state: present
+#     - name: Install required system packages
+#       apt:
+#         name:
+#           - python3-pip
+#           - python3-venv
+#           - curl
+#           - gnupg
+#           - apt-transport-https
+#         state: present
 
-    - name: Install pip packages for Kubernetes interaction
-      pip:
-        name:
-          - openshift
-          - kubernetes
-        executable: pip3
+#     - name: Install pip packages for Kubernetes interaction
+#       pip:
+#         name:
+#           - openshift
+#           - kubernetes
+#         executable: pip3
 
 - name: Create an NGINX pod and service for testing
   hosts: localhost
@@ -44,6 +44,8 @@
                 ports:
                   - containerPort: 80
         kubeconfig: /home/ubuntu/.kube/config
+        environment:
+          KUBECONFIG: /home/ubuntu/.kube/config
 
     - name: Expose the NGINX pod as a service
       community.kubernetes.k8s:
@@ -65,3 +67,5 @@
                 targetPort: 80
             type: NodePort
         kubeconfig: /home/ubuntu/.kube/config
+        environment:
+          KUBECONFIG: /home/ubuntu/.kube/config
