--- a/playbooks/036.test-k8s.yaml
+++ b/playbooks/036.test-k8s.yaml
@@ -39,3 +39,29 @@
                 targetPort: 80
             type: NodePort
         kubeconfig: /home/ubuntu/.kube/config
+    
+    - name: Create an Ingress resource for routing traffic to the NGINX pod
+      kubernetes.core.k8s:
+        state: present
+        definition:
+          apiVersion: networking.k8s.io/v1
+          kind: Ingress
+          metadata:
+            name: nginx-ingress
+            namespace: default
+            annotations:
+              nginx.ingress.kubernetes.io/rewrite-target: /
+          spec:
+            ingressClassName: nginx
+            rules:
+              - host: nginx.example.com
+                http:
+                  paths:
+                    - path: /
+                      pathType: Prefix
+                      backend:
+                        service:
+                          name: nginx-service
+                          port:
+                            number: 80
+        kubeconfig: /home/ubuntu/.kube/config
