--- a/playbooks/036.test-k8s.yaml
+++ b/playbooks/036.test-k8s.yaml
@@ -5,65 +5,5 @@
     - name: Create an NGINX pod
       kubernetes.core.k8s:
         state: present
-        definition:
-          apiVersion: v1
-          kind: Pod
-          metadata:
-            name: nginx-test
-            namespace: default
-            labels:
-              app: nginx-test
-          spec:
-            containers:
-              - name: nginx
-                image: nginx:latest
-                ports:
-                  - containerPort: 80
-        kubeconfig: /home/ubuntu/.kube/config
-
-    - name: Expose the NGINX pod as a service
-      kubernetes.core.k8s:
-        state: present
-        definition:
-          apiVersion: v1
-          kind: Service
-          metadata:
-            name: nginx-service
-            namespace: default
-            labels:
-              app: nginx-test
-          spec:
-            selector:
-              app: nginx-test
-            ports:
-              - protocol: TCP
-                port: 80
-                targetPort: 80
-            type: NodePort
-        kubeconfig: /home/ubuntu/.kube/config
-    
-    - name: Create an Ingress resource for routing traffic to the NGINX pod
-      kubernetes.core.k8s:
-        state: present
-        definition:
-          apiVersion: networking.k8s.io/v1
-          kind: Ingress
-          metadata:
-            name: nginx-ingress
-            namespace: default
-            annotations:
-              nginx.ingress.kubernetes.io/rewrite-target: /
-          spec:
-            ingressClassName: nginx
-            rules:
-              - host: nginx.example.com
-                http:
-                  paths:
-                    - path: /
-                      pathType: Prefix
-                      backend:
-                        service:
-                          name: nginx-service
-                          port:
-                            number: 80
+        src: files/test_k8s.yaml
         kubeconfig: /home/ubuntu/.kube/config
