--- a/playbooks/035-install-nginx-ingress-controller.yaml
+++ b/playbooks/035-install-nginx-ingress-controller.yaml
@@ -37,3 +37,5 @@
               externalTrafficPolicy: Cluster
               httpPort:
                 nodePort: 30080
+              httpsPort:
+                enabled: false
